=== Edge

* echoe was not being properly registered as a development dependency; a bug in RubyGems was making it a runtime dependency

* Fixed "No definition for redcloth_to Installing RDoc documentation"

* Fixed wrong platform names when cross-compiling java and win32 versions

=== 4.1.0 / October 31, 2008

* JRuby support!  [olabini]
  To run the tests with JRuby, you only need to: jruby -S rake
  To compile the jruby version of the gem: jruby -S rake compile

* Added textilize ERB utility method. [edraut]
  Use it in an ERB template like this: <%=t my_textile_string %> or 
  <%=r %{Some *textile* if you please!} %>

* Fix extended blockcode stripping whitespace following blank line. #78


=== 4.0.4 / October 1, 2008

* Added some very basic support for images in LaTeX. [virtualfunction]

* Fixed missed caps and inline modifiers wrapped in parentheses. #43, #45

* Removed indication of quotes explicitly with square brackets.  Textile 2.0 does not support this and it wasn't in RedCloth 3. #46

* Made percent signs less greedy.  They must surround a phrase or else they must be surrounded with square brackets, just like sup, sub, and del phrases. #47

* Reduced link eagerness so it wouldn't include preceding quoted phrases. #48

* Fixed compatibility issues with Ruby 1.9 [Keita Yamaguchi]. #52, 53, 54

* Fixed an error when a link was badly nested in parentheses. #55

* Fixed an error on superscript/subscript parenthetical phrase. #56

* Fixed bold phrases starting with a number being recognized as unordered lists. #60

* Fixed behavior of unclosed (multi-paragraph) quotes and incorrect handling of links inside double quotations. #59, #63

* Fixed empty block HTML disappearing. #64


=== 4.0.3 / August 18, 2008

* Fix NoMethodError: private method gsub!' called for nil:NilClass when two dimensions followed by a space. #38
